--- a/card/Base.lproj/Main.storyboard
+++ b/card/Base.lproj/Main.storyboard
@@ -734,9 +734,29 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnd-ah-NJ9">
+                                <rect key="frame" x="199" y="241" width="67" height="16"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Card Logo" id="CXe-CM-SHu">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5cb-0X-WKR">
+                                <rect key="frame" x="99" y="114" width="140" height="16"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Card Name or Number" id="NLL-4x-dis">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="cardLogo" destination="pnd-ah-NJ9" id="IlG-N4-rAq"/>
+                        <outlet property="cardName" destination="5cb-0X-WKR" id="ywK-ax-4t2"/>
                         <outlet property="descriptinTextField" destination="BU4-dv-40W" id="WR6-V9-noh"/>
                         <outlet property="switchLidlPay" destination="arx-Jc-5IY" id="6Hv-ar-zph"/>
                     </connections>
